test/sh/error/multi_param_func_call_missing_comma.sk
external f(a: int, b: int)

f(1 2)
